crates/codegen/language/tests/src/fail/definitions/duplicate_expression_name/test.stderr
error: An expression with the name 'Expression1' already exists.
  --> src/fail/definitions/duplicate_expression_name/test.rs:34:36
   |
34 | ...                   name = Expression1,
   |                              ^^^^^^^^^^^
